[fix]:Ajust alignments in skillsets

--- a/src/components/skillsets/Skillsets.css
+++ b/src/components/skillsets/Skillsets.css
@@ -11,6 +11,8 @@
     flex-wrap:wrap;
     justify-content:space-around;
     padding-left: 110px;
-    padding-right: 130px;
-    width: 100%;
+    padding-right: 110px;
+    width: 80vw;
+    margin-left: 100px;
+
 }
